--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-  "token":"NjAwMDIzMDk3Mzc0MTQ2NTYw.XStxlQ.oHhQEGlPW8Ldcf4XbscviQN-tFE",
+  "token":"xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx",
   "prefix":"-",
   "idOwner":"312689346501410817"
 }
